<resources>
    <string name="app_name">Project300</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <string name="nav_home">Home</string>
    <string name="nav_weekly_class">Weekly Class</string>
    <string name="nav_daily_class">Daily Class</string>
    <string name="nav_manage_profile">Manage Profile</string>
    <string name="nav_privacy_statement">Privacy Statement</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Weekly Class</item>
        <item>Daily Class</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="activity_title_manage_profile">Manage Profile</string>
    <string name="activity_title_privacy_statement">Privacy Statement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
